# jmi-data-analytics-lab

./: .gitignore  README.md  pyproject.toml
assessment_01/: README.md  __init__.py  constants.py
assessment_01/data/: the_great_expectations.txt  the_treasure_island.txt
assessment_01/questions/: q_01.py  q_02.py
assessment_01/util/: table.py  word_to_vec.py
assessment_02/: __init__.py
assessment_02/questions/: association.py
assessment_02/questions/question_01/: __init__.py
assessment_02/questions/question_01/constants/: data.py
assessment_02/questions/question_02/: __init__.py
assessment_03/: __init__.py  data.py  dissimilar.py  utils.py
assessment_04/: __init__.py  association.py  db.py
utils/: database.py
