[tool.poetry]
name = "data-analytics-lab"
version = "0.1.0"
description = ""
authors = ["vilayat-ali <vilayatcodemysite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
# assessment = "assessment_03:main"
assessment = "assessment_04:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
